Fix alignment of sponsors columns + column contents

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -1579,33 +1579,18 @@ ul.showcase {
 
   width: 33.333%;
   margin: 10px 0;
-  &:nth-child(3n+1) {
-    a {
-      margin: 0 auto 0 0;
-    }
-  }
-  &:nth-child(3n+2) {
-    a {
-      margin: 0 auto 0 auto;
-    }
-  }
-  &:nth-child(3n+3) {
-    a {
-      margin: 0 0 0 auto;
-    }
-  }
+
   a {
     background-image: url('/images/about/user_bg.png');
     display: block;
     height: 103px;
     width: 210px;
     text-align: center;
+    margin: 0 auto;
 
     img {
-      height: auto;
-      width: auto;
-      max-height: 103px;
-      max-width: 210px;
+      height: 103px;
+      width: 210px;
     }
   }
 }
